# Operon

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  PROTOCOL.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  live-mount-smoke.yml  release-draft.yml  v0.14-live-mount-smoke.yml  verify-readme-quickstart.yml  verify-release-artifacts.yml  verify-release-install-usability.yml  windows-runner-image-smoke.yml
crates/operon-cli/: Cargo.toml
crates/operon-cli/src/: cli_args.rs  cli_dispatch.rs  graph.rs  grpc.rs  grpc_audit.rs  grpc_exec.rs  grpc_exec_api.rs  grpc_fs.rs  grpc_service.rs  grpc_service_api.rs  main.rs  onboard.rs  output.rs  private_files.rs  target.rs
crates/operon-cli/src/commands/: audit.rs  capability.rs  config.rs  doctor.rs  exec.rs  exec_args.rs  exec_session.rs  fs.rs  init.rs  job.rs  mod.rs  mount.rs  mount_runtime.rs  node.rs  provider.rs  service.rs  trace.rs
crates/operon-cli/src/commands/config/: explain.rs
crates/operon-cli/src/onboard/: plan.rs  render.rs  write.rs
crates/operon-cli/tests/: cli_static_integration.rs
crates/operon-config/: Cargo.toml
crates/operon-core/: Cargo.toml
crates/operon-core/src/: audit.rs  discovery.rs  exec.rs  fs.rs  job.rs  lib.rs  policy.rs  runtime.rs  service.rs  trace.rs
crates/operon-fs/: Cargo.toml
crates/operon-grpc-client/: Cargo.toml
crates/operon-grpc-client/src/: lib.rs
crates/operon-mount/: Cargo.toml  build.rs
crates/operon-mount/src/: errors.rs  fuse_attr.rs  fuse_fs.rs  fuse_semantics.rs  inode_table.rs  lib.rs  mount_core.rs  path.rs  remote_client.rs  session.rs  windows.rs  windows_file_info.rs  windows_path.rs  windows_security.rs  windows_status.rs
crates/operon-network/: Cargo.toml
crates/operon-network/src/: lib.rs
crates/operon-process/: Cargo.toml
crates/operon-protocol/: Cargo.toml  build.rs
crates/operon-protocol/src/: lib.rs
crates/operon-store/: Cargo.toml
crates/operon-store/src/: lib.rs
crates/operond/: Cargo.toml
crates/operond/src/: audit.rs  auth.rs  capability_diagnostics.rs  daemon_cli.rs  daemon_state.rs  defaults.rs  exec_command.rs  exec_process.rs  exec_runtime.rs  exec_service.rs  exec_session.rs  fs_service.rs  grpc_status.rs  job_runtime.rs  lan_advertise.rs  locks.rs  main.rs  pagination.rs  runtime.rs  service_datagram_forward.rs  service_forward.rs  service_manager.rs  service_tcp_forward.rs  state.rs  store_config.rs
docker/: Dockerfile  entrypoint.sh
docs/architecture/: runtime-api.md  technology-and-protocol-decisions.md
docs/decisions/: computer-mesh-operon-summary.md  musl-alpine-distribution.md
docs/dicussions/: computer-mesh-operon.md
docs/plan/: development-phases.md  mvp-acceptance.md  v0.10-exec-unification.md  v0.10.1-fs-consistency-workspace-hardening.md  v0.10.2-operator-diagnostics.md  v0.10.4-maintainability-cleanup.md  v0.10.5-maintainability-cleanup.md  v0.11-exec-session-pty-interactive.md  v0.11.2-exec-session-hardening.md  v0.11.3-platform-capability-matrix.md  v0.12-release-distribution-readiness.md  v0.12.1-platform-parity-hardening.md  v0.12.2-maintainability-cleanup.md  v0.12.3-windows-exec-process-tree-cancellation.md  v0.12.4-release-artifact-verification.md  v0.12.5-cli-grpc-maintainability-cleanup.md  v0.13-mount-adapter-strategy.md  v0.13-release-publication.md  v0.13.1-windows-pty-validation.md  v0.13.2-windows-private-file-acl.md  v0.13.3-config-onboard-maintainability.md  v0.13.4-ci-validation-consolidation.md  v0.13.5-daemon-service-management.md  v0.13.5-mount-adapter-strategy.md  v0.13.6-mount-adapter-strategy.md  v0.13.6-test-hardening.md  v0.13.7-mount-adapter-strategy.md  v0.13.8-mount-core-boundary.md  v0.14-cross-platform-live-mount.md  v0.14-macos-live-smoke-runbook.md  v0.14.1-mount-stabilization.md  v0.15-windows-exec-session-parity.md  v0.15.1-release-gate-hardening.md  v0.16-mount-runtime-ux-hardening.md  v0.16.1-generic-mount-release-naming.md  v0.16.2-sdk-maintainability-cleanup.md  v0.16.3-daemon-mount-maintainability-cleanup.md  v0.16.4-mount-runtime-preflight-ux.md  v0.16.5-release-publication.md  v0.16.6-release-publication.md  (+64 more)
docs/quality/: release-ci-observability.md  release-install-usability.md  test-coverage-audit.md
examples/: config.yaml  docker-config.yaml  docker-copy-and-run.yaml  docker-node-a-config.yaml  docker-node-b-config.yaml  docker-nodes-grpc.yaml  docker-nodes.yaml  docker-policy.yaml  docker-secrets.yaml  nodes.yaml  train-model.yaml
proto/operon/: execution.proto  runtime.proto
scripts/: assess-musl-alpine-distribution.sh  install-macos-fuse-t.sh  install-v0.14-macos-fuse-t.sh  preflight-macos-fuse-t-host.sh  preflight-v0.14-macos-fuse-t-host.sh  preflight-v0.14-macos-macfuse-host.sh  release-gate-orchestrate.sh  smoke-macos-fuse-zip-probe.sh  smoke-macos-fuser-hello-probe.sh  smoke-macos-libfuse-lowlevel-hello-probe.sh  smoke-macos-live-mount.sh  smoke-release-archive.sh  smoke-v0.14-macos-fuse-zip-probe.sh  smoke-v0.14-macos-fuser-hello-probe.sh  smoke-v0.14-macos-libfuse-lowlevel-hello-probe.sh  smoke-v0.14-macos-live-mount.sh  smoke-v0.14-windows-live-mount.ps1  smoke-windows-live-mount.ps1  verify-docs-help-skills-sync.sh  verify-mvp-docker.sh  verify-phase1-docker.sh  verify-policy-derived-capabilities.sh  verify-post-v0.9-discovery-ux.sh  verify-readme-quickstart-docker.sh  verify-release-artifacts.sh  verify-release-gates.sh  verify-release-glibc-baseline.sh  verify-release-install-usability.sh  verify-release-linux-install-containers.sh  verify-release-service-management-smoke.sh  verify-v0.10-exec-unification.sh  verify-v0.10.1-fs-consistency-workspace-hardening.sh  verify-v0.10.2-operator-diagnostics.sh  verify-v0.10.4-maintainability-cleanup.sh  verify-v0.10.5-maintainability-cleanup.sh  verify-v0.11-exec-session.sh  verify-v0.11.2-exec-session-hardening.sh  verify-v0.11.3-platform-capability-matrix.sh  verify-v0.12-release-distribution-readiness.sh  verify-v0.12.1-platform-parity-hardening.sh  (+77 more)
scripts/ci/: run-validations.sh
scripts/lib/: release-install.sh  validation.sh
(+13 files in other folders)
