[workspace]
members = [
  "crates/operond",
  "crates/operon-cli",
  "crates/operon-core",
  "crates/operon-protocol",
  "crates/operon-fs",
  "crates/operon-process",
  "crates/operon-store",
  "crates/operon-network",
  "crates/operon-mount",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/operon/operon"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
mdns-sd = "0.19.1"
prost = "0.14.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "signal", "sync", "time", "io-util", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
