[package]
name = "operon-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "operon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
getrandom.workspace = true
mdns-sd.workspace = true
operon-config = { path = "../operon-config" }
operon-core = { path = "../operon-core" }
operon-mount = { path = "../operon-mount" }
operon-network = { path = "../operon-network" }
operon-protocol = { path = "../operon-protocol" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tonic.workspace = true
