[package]
name = "operon-cli"
version = "0.13.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "operon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
futures-util.workspace = true
getrandom.workspace = true
mdns-sd.workspace = true
operon-config = { path = "../operon-config" }
operon-core = { path = "../operon-core" }
operon-grpc-client = { path = "../operon-grpc-client" }
operon-network = { path = "../operon-network" }
operon-protocol = { path = "../operon-protocol" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tonic.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
operon-mount = { path = "../operon-mount" }

[dev-dependencies]
tempfile.workspace = true
