[package]
name = "operon-cli"
version = "0.16.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "operon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
futures-util.workspace = true
getrandom.workspace = true
mdns-sd.workspace = true
operon-config = { path = "../operon-config" }
operon-core = { path = "../operon-core" }
operon-grpc-client = { path = "../operon-grpc-client" }
operon-network = { path = "../operon-network" }
operon-protocol = { path = "../operon-protocol" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tonic.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
operon-mount = { path = "../operon-mount" }

[target.'cfg(windows)'.dependencies]
operon-mount = { path = "../operon-mount" }
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_Threading"] }

[target.'cfg(windows)'.build-dependencies]
winfsp_wrs_build = "0.4.1"

[dev-dependencies]
tempfile.workspace = true
