[package]
name = "operon-grpc-client"
version = "0.10.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
operon-core = { path = "../operon-core" }
operon-network = { path = "../operon-network" }
operon-protocol = { path = "../operon-protocol" }
tonic.workspace = true
