[package]
name = "operon-grpc-client"
version = "0.14.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
operon-core = { path = "../operon-core" }
operon-network = { path = "../operon-network" }
operon-protocol = { path = "../operon-protocol" }
tokio.workspace = true
tonic.workspace = true
