[package]
name = "operon-mount"
version = "0.12.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
ctrlc.workspace = true
futures-util.workspace = true
operon-core = { path = "../operon-core" }
operon-grpc-client = { path = "../operon-grpc-client" }
operon-network = { path = "../operon-network" }
operon-protocol = { path = "../operon-protocol" }
tokio.workspace = true
tonic.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
fuser.workspace = true
libc.workspace = true
