[package]
name = "operon-mount"
version = "0.14.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
macos-no-mount = ["fuser/macos-no-mount"]

[dependencies]
anyhow.workspace = true
ctrlc.workspace = true
futures-util.workspace = true
operon-core = { path = "../operon-core" }
operon-grpc-client = { path = "../operon-grpc-client" }
operon-network = { path = "../operon-network" }
operon-protocol = { path = "../operon-protocol" }
tokio.workspace = true
tonic.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
fuser.workspace = true
libc.workspace = true

[target.'cfg(windows)'.dependencies]
winfsp_wrs = "0.4.1"
