[package]
name = "operon-mount"
version = "0.14.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
macos-no-mount = ["fuser/macos-no-mount"]
winfsp-debug = ["winfsp_wrs/debug"]

[dependencies]
anyhow.workspace = true
ctrlc.workspace = true
futures-util.workspace = true
operon-core = { path = "../operon-core" }
operon-grpc-client = { path = "../operon-grpc-client" }
operon-network = { path = "../operon-network" }
operon-protocol = { path = "../operon-protocol" }
tokio.workspace = true
tonic.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
fuser.workspace = true
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_System_Console"] }
winfsp_wrs = "0.4.1"
winfsp_wrs_sys = "0.4.1"

[target.'cfg(windows)'.build-dependencies]
winfsp_wrs_build = "0.4.1"
