[package]
name = "operon-network"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
mdns-sd.workspace = true
operon-config = { path = "../operon-config" }
operon-core = { path = "../operon-core" }
tokio.workspace = true
