[package]
name = "operon-store"
version = "0.13.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
libc.workspace = true
operon-core = { path = "../operon-core" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
