[package]
name = "operond"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
operon-core = { path = "../operon-core" }
operon-network = { path = "../operon-network" }
tokio.workspace = true
tracing.workspace = true
