[package]
name = "operond"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
clap.workspace = true
futures-util.workspace = true
mdns-sd.workspace = true
operon-core = { path = "../operon-core" }
operon-network = { path = "../operon-network" }
operon-protocol = { path = "../operon-protocol" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
