[package]
name = "operond"
version = "0.9.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
clap.workspace = true
futures-util.workspace = true
libc.workspace = true
mdns-sd.workspace = true
operon-config = { path = "../operon-config" }
operon-core = { path = "../operon-core" }
operon-fs = { path = "../operon-fs" }
operon-network = { path = "../operon-network" }
operon-process = { path = "../operon-process" }
operon-protocol = { path = "../operon-protocol" }
operon-store = { path = "../operon-store" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
